--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "@react-navigation/stack": "^6.3.16",
     "@types/react": "~18.0.27",
     "expo": "~48.0.15",
     "expo-file-system": "~15.2.2",
@@ -29,6 +28,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "3.5.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
